<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    android:backgroundTintMode="add"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/fondoLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:contentDescription="@string/imagen_de_fondo"
        android:scaleType="fitXY"
        android:src="@mipmap/fonfolapiz" />


    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        app:orientation="horizontal">

        <TextView
            android:id="@+id/textoLogin"
            style="@style/etiquetas"
            android:text="@string/login"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textoRegistrar"
            style="@style/etiquetas"
            android:layout_marginStart="20dp"
            android:onClick="crearCuenta"
            android:text="@string/registrar"
            android:textColor="@color/secondaryText" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            app:boxBackgroundColor="@color/lightPrimaryColor"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/accentColor"
            app:startIconDrawable="@drawable/usuario"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaUser"
                style="@style/textInput"
                >

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/pass"
            app:boxBackgroundColor="@color/lightPrimaryColor"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:hintTextColor="@color/accentColor"
            app:startIconDrawable="@drawable/candado">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cajaPass"
                style="@style/textInput"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/botonLogin"
        style="@style/botones"
        android:onClick="login"
        android:text="@string/login"
        app:icon="@drawable/llave_login"
        app:iconSize="20dp"
        app:iconTint="@color/colorPrimaryDark"
        />
</RelativeLayout>